@@ -12,6 +12,7 @@ systemd (214-1) UNRELEASED; urgency=medium
       libsystemd0. The old -dev files now just carry a transitional .pc file.
     - Add new symbols file for libsystemd0.
   * Update symbols file for libgudev-1.0-0.
+  * Remove pre-generated rules and unit files in debian/rules clean target.
 
   [ Sjoerd Simons ]
   * debian/patches/shared-include-stdbool.h-in-mkdir.h.patch
